fix: update marker

--- a/examples/add-marker.html
+++ b/examples/add-marker.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link href="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.css" rel="stylesheet" />
-    <script src="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://unpkg.com/maplibre-gl@3.3.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@3.3.0/dist/maplibre-gl.js"></script>
     <style>
+      html,
       body {
         margin: 0;
         padding: 0;
+        height: 100%;
       }
       #map {
-        min-height: 500px;
         height: 100%;
         width: 100%;
       }
@@ -30,19 +32,30 @@
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       const map = new maplibregl.Map({
         container: "map",
-        style: `https://api.jawg.io/styles/jawg-terrain.json?access-token=${accessToken}`,
+        style: `https://api.jawg.io/styles/jawg-streets.json?access-token=${accessToken}`,
         zoom: 11,
         center: [2.349902, 48.852966],
       }).addControl(new maplibregl.NavigationControl(), "top-right");
       // This plugin is used for right to left languages
       maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
 
-      // This add a marker with the default icon
+      // Add a marker with the default icon
       new maplibregl.Marker().setLngLat([2.349902, 48.852966]).addTo(map);
-      // Marker with custom icon
+
+      // Add a Marker with a custom icon.
+      // Check all the marker options here: https://maplibre.org/maplibre-gl-js/docs/API/types/maplibregl.MarkerOptions/
       const el = document.createElement("div");
-      el.className = "marker";
-      new maplibregl.Marker(el).setLngLat([2.294694, 48.858093]).addTo(map);
+      el.addEventListener("click", () => {
+        window.alert("Eiffel Tower");
+      });
+
+      // add marker to map
+      new maplibregl.Marker({
+        className: "marker",
+        element: el,
+      })
+        .setLngLat([2.294694, 48.858093])
+        .addTo(map);
     </script>
   </body>
 </html>
