--- a/examples/gis/cluster-air-quality.html
+++ b/examples/gis/cluster-air-quality.html
@@ -79,7 +79,11 @@
           style: `https://api.jawg.io/gis/maps/${mapId}/versions/latest/style?access-token=${accessToken}`,
           zoom: 2,
           center: [8.8, 10.9],
-        }).addControl(new maplibregl.NavigationControl(), "top-right");
+        });
+        const useNavigationControl = new URLSearchParams(window.location.search).get("navigation-control");
+        if (useNavigationControl !== "false") {
+          map.addControl(new maplibregl.NavigationControl(), "top-right");
+        }
         // This plugin is used for right to left languages
         maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
 
