--- a/examples/add-your-data.html
+++ b/examples/add-your-data.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.css" rel="stylesheet" />
-    <script src="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.js"></script>
+    <link href="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.js"></script>
     <style>
       html,
       body {
@@ -52,6 +52,7 @@
             "icon-image": "custom-marker",
             "icon-anchor": "bottom",
             "icon-overlap": "always",
+            "icon-ignore-placement": true,
           },
         });
       });
