--- a/examples/change-language.html
+++ b/examples/change-language.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link href="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.css" rel="stylesheet" />
-    <script src="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.js"></script>
+    <link href="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.js"></script>
     <style>
       html,
       body {
@@ -29,6 +29,7 @@
   <body>
     <div id="map">
       <select id="languages">
+        <option selected>Automatic</option>
         <option value="en">English</option>
         <option value="fr">French</option>
         <option value="it">Italian</option>
@@ -36,6 +37,9 @@
         <option value="de">German</option>
         <option value="nl">Dutch</option>
         <option value="zh">Chinese</option>
+        <option value="ja">Japanese</option>
+        <option value="ko">Korean</option>
+        <option value="ru">Russian</option>
       </select>
     </div>
     <script>
@@ -46,7 +50,7 @@
 
       const map = new maplibregl.Map({
         container: "map",
-        style: `https://api.jawg.io/styles/${styleId}.json?lang=en&access-token=${accessToken}`,
+        style: `https://api.jawg.io/styles/${styleId}.json?access-token=${accessToken}`,
         zoom: 2,
         center: [2.3210938, 48.7965913],
         hash: true,
@@ -55,9 +59,9 @@
       maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
 
       map.on("load", () => {
-        document.getElementById("languages").addEventListener("change", function (event) {
-          var language = event.target.value;
-          map.setStyle(`https://api.jawg.io/styles/${styleId}.json?lang=${language}&access-token=${accessToken}`);
+        document.getElementById("languages").addEventListener("change", (event) => {
+          const language = event.target.value;
+          map.setStyle(`https://api.jawg.io/styles/${styleId}.json?access-token=${accessToken}&lang=${language}`);
         });
       });
     </script>
