--- a/examples/change-style.html
+++ b/examples/change-style.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link href="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.css" rel="stylesheet" />
-    <script src="https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.js"></script>
+    <link href="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@4.5.0/dist/maplibre-gl.js"></script>
     <style>
       html,
       body {
@@ -40,13 +40,15 @@
     <script>
       // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
       const accessToken = "<YOUR_ACCESS_TOKEN>";
-      const layerList = document.getElementById("styles");
-      const options = layerList.getElementsByTagName("option");
+
+      const styleList = document.getElementById("styles");
+      const options = styleList.getElementsByTagName("option");
+
       const map = new maplibregl.Map({
         container: "map",
         style: `https://api.jawg.io/styles/${options[0].value}.json?access-token=${accessToken}`,
-        zoom: 12,
-        center: [35.51, 33.88],
+        zoom: 13,
+        center: [5.3704085, 43.2963844],
       }).addControl(new maplibregl.NavigationControl(), "top-right");
       // This plugin is used for right to left languages
       maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
