--- a/examples/add-origin-info.html
+++ b/examples/add-origin-info.html
@@ -21,7 +21,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       // This is the client identifier. Tile requests origin will appear as "www.acme.com|client1" in the lab statistics tab (https://www.jawg.io/lab/stats)
       const myClientId = "client1";
