--- a/examples/change-language.html
+++ b/examples/change-language.html
@@ -43,7 +43,7 @@
       </select>
     </div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
 
       const styleId = "jawg-lagoon";
