--- a/examples/gis/category-filter.html
+++ b/examples/gis/category-filter.html
@@ -66,7 +66,7 @@
         // The property name containing the model id. This property is set by Jawg GIS during import.
         const JAWG_MODEL_PROPERTY_NAME = "jawg:model";
 
-        // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your real access token!
+        // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your own access token
         const accessToken = "<YOUR_GIS_ACCESS_TOKEN>";
         const mapId = "<YOUR_GIS_MAP_ID>";
         const map = new maplibregl.Map({
