--- a/examples/gis/cluster-air-quality.html
+++ b/examples/gis/cluster-air-quality.html
@@ -70,9 +70,9 @@
     </div>
     <script>
       (async () => {
-        // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your real access token!
+        // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your own access token
         const accessToken = "<YOUR_GIS_ACCESS_TOKEN>";
-        // Don't forget to replace <YOUR_GIS_MAP_ID> by your real map id!
+        // Don't forget to replace <YOUR_GIS_MAP_ID> by your own map id
         const mapId = "<YOUR_GIS_MAP_ID>";
         const map = new maplibregl.Map({
           container: "map",
