--- a/examples/map-session.html
+++ b/examples/map-session.html
@@ -25,7 +25,7 @@
       // Get the MapSession class from window using the UMD module name
       const MapSession = window.jawg_map_session;
 
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
 
       // Create a new map session and generate a session token
