--- a/examples/maplibre-gl-directions.html
+++ b/examples/maplibre-gl-directions.html
@@ -23,7 +23,7 @@
     <script type="module">
       import MapLibreGlDirections from "https://unpkg.com/@maplibre/maplibre-gl-directions@0.7.0/dist/maplibre-gl-directions.js";
 
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       const map = new maplibregl.Map({
         container: "map",
