--- a/examples/change-style.html
+++ b/examples/change-style.html
@@ -38,7 +38,7 @@
       </select>
     </div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
 
       const styleList = document.getElementById("styles");
