--- a/examples/cluster.html
+++ b/examples/cluster.html
@@ -21,7 +21,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       const map = new maplibregl.Map({
         container: "map",
