--- a/examples/custom-style.html
+++ b/examples/custom-style.html
@@ -21,7 +21,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       // Set your custom style ID. To get your custom style ID see https://www.jawg.io/docs/maps#get-custom-style-id
       const styleId = "<YOUR_CUSTOM_STYLE_ID>";
