--- a/examples/draw-radius.html
+++ b/examples/draw-radius.html
@@ -22,7 +22,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       const radiusCenter = [2.3454, 48.8452];
       const map = new maplibregl.Map({
