--- a/examples/gis/gis-simple-map.html
+++ b/examples/gis/gis-simple-map.html
@@ -22,7 +22,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_GIS_ACCESS_TOKEN>";
       const mapId = "<YOUR_GIS_MAP_ID>";
       const map = new maplibregl.Map({
