--- a/examples/mapload.html
+++ b/examples/mapload.html
@@ -22,7 +22,7 @@
   <body>
     <div id="map"></div>
     <script>
-      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
       const accessToken = "<YOUR_ACCESS_TOKEN>";
       // Use Jawg.Map instead of maplibregl.Map. Then use it as a normal maplibregl.Map.
       const map = new Jawg.Map({
