--- a/examples/globe-projection.html
+++ b/examples/globe-projection.html
@@ -26,6 +26,7 @@
         // Don't forget to replace <YOUR_ACCESS_TOKEN> by your own access token
         const accessToken = "<YOUR_ACCESS_TOKEN>";
 
+        // Get the style then entend it with the globe projection
         const style = await fetch(`https://api.jawg.io/styles/jawg-terrain.json?access-token=${accessToken}`)
           .then((response) => response.json())
           .then((style) => {
@@ -43,6 +44,7 @@
           zoom: 2,
           center: [0, 0],
           maxPitch: 85,
+          canvasContextAttributes: { antialias: true },          
         }).addControl(new maplibregl.NavigationControl(), "top-right");
         // This plugin is used for right to left languages
         maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
